workspace.members = [
    "bslive",
    "bsnext",
    "crates/*",
]
workspace.resolver = "2"
workspace.exclude = [
    "crates/bsnext_otel"
]

[workspace.dependencies]
clap = { version = "4.5.3", features = ["derive"] }
axum = { version = "0.7.7", features = ["ws"] }
matchit = { version = "0.7.3" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures = "0.3.30"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tower = { version = "0.4", features = ['steer', 'util'] }
tower-http = { version = "0.6.0", features = ['trace', 'fs', 'compression-full', 'decompression-full', 'catch-panic', 'cors', 'timeout', 'set-header', ] }
tracing = { version = "0.1.35", default-features = false, features = ["std", "attributes"] }
actix = "0.13.1"
actix-rt = "2.9.0"
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.115"
thiserror = "1.0.58"
bytes = "1.6.0"
http = "1.1.0"
http-body-util = "0.1.1"
typeshare = "1"
globset = { version = "0.4.16" }
random_word = { version = "0.4.3", features = ["en"] }
mime_guess = "2.0.4"
tempfile = "3.10.1"
insta = { version = "1.38.0", features = ["yaml"] }
miette = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
kill_tree = { version = "0.2.4", features = ["tokio"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
