[package]
edition = "2021"
name = "bslive"
version = "0.14.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bsnext_system = { path = "../crates/bsnext_system" }

tokio = { workspace = true }
actix-rt = { workspace = true }

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt", "tokio_full"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"
