[package]
edition = "2021"
name = "bslive"
version = "0.16.2"

[lib]
crate-type = ["cdylib"]

[dependencies]
bsnext_system = { path = "../crates/bsnext_system" }

tokio = { workspace = true }
actix-rt = { workspace = true }

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"

[build-dependencies]
napi-build = "2.2.0"
