[package]
edition = "2021"
name = "bslive"
version = "0.23.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bsnext_system = { path = "../crates/bsnext_system" }

tokio = { workspace = true }
serde_json = { workspace = true }
actix-rt = { workspace = true }

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi-derive = "2.16.13"

[dependencies.napi]
version = "2.16.17"
default-features = false
features = ["napi4", "serde", "serde-json"]

[build-dependencies]
napi-build = "2.2.0"
