[package]
name = "bsnext"
version = "0.1.0"
edition = "2021"

[dependencies]
bsnext_core = { path = "../crates/bsnext_core" }
bsnext_input = { path = "../crates/bsnext_input" }
bsnext_fs = { path = "../crates/bsnext_fs" }
bsnext_tracing = { path = "../crates/bsnext_tracing" }
bsnext_system = { path = "../crates/bsnext_system" }
bsnext_output = { path = "../crates/bsnext_output" }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
actix = { workspace = true }
actix-rt = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }