[package]
name = "bsnext_core"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bsnext_utils = { path = "../bsnext_utils" }

[dependencies]
bsnext_input = { path = "../bsnext_input" }
bsnext_fs_helpers = { path = "../bsnext_fs_helpers" }
bsnext_fs = { path = "../bsnext_fs" }
bsnext_resp = { path = "../bsnext_resp" }
bsnext_client = { path = "../bsnext_client" }
bsnext_dto = { path = "../bsnext_dto" }
bsnext_guards = { path = "../bsnext_guards" }
bsnext_output = { path = "../bsnext_output" }
bsnext_tracing = { path = "../bsnext_tracing" }

axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
hyper-tls = { version = "0.6.0" }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }

mime_guess = { workspace = true }
insta = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
actix = { workspace = true }
actix-rt = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }

[[example]]
name = "abc"
