[package]
name = "bsnext_dto"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsnext_input = { path = "../bsnext_input" }
bsnext_fs = { path = "../bsnext_fs" }
bsnext_tracing = { path = "../bsnext_tracing" }

serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
actix = { workspace = true }
typeshare = { workspace = true }
