[package]
name = "bsnext_example"
version = "0.21.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsnext_input = { path = "../bsnext_input" }
bsnext_md = { path = "../bsnext_md" }
bsnext_html = { path = "../bsnext_html" }
clap = { workspace = true }
