[package]
name = "bsnext_fs"
version = "0.15.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
pin-project-lite = "0.2.14"
glob-match = { version = "0.2.1" }

actix = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
bsnext_tracing = { path = "../bsnext_tracing" }
tracing = { workspace = true }
kill_tree = { workspace = true }
anyhow = { workspace = true }
