[package]
name = "bsnext_fs"
version = "0.24.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
pin-project-lite = "0.2.14"
globset = { workspace = true }

actix = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bsnext_tracing = { path = "../bsnext_tracing" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
kill_tree = { workspace = true }
anyhow = { workspace = true }
