[package]
name = "bsnext_html"
version = "0.3.1"
edition = "2021"

[dependencies]
bsnext_input = { path = "../bsnext_input" }
unindent = "0.2.3"
indent = "0.1.1"
scraper = { git = "https://github.com/shakyShane/scraper.git", branch = "master" }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
