[package]
name = "bsnext_md"
version = "0.1.0"
edition = "2021"

[dependencies]
markdown = { version = "1.0.0-alpha.16" }
nom = "7.1.3"
bsnext_input = { path = "../bsnext_input" }

mime_guess = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
insta = { workspace = true }
