[package]
name = "bsnext_resp"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsnext_guards = { path = "../bsnext_guards" }

tracing = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
http-body-util = { workspace = true }
anyhow = "1.0.86"

[dev-dependencies]
tokio = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
