[package]
name = "bsnext_system"
version = "0.17.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsnext_input = { path = "../bsnext_input" }
bsnext_md = { path = "../bsnext_md" }
bsnext_html = { path = "../bsnext_html" }
bsnext_js = { path = "../bsnext_js" }
bsnext_yaml = { path = "../bsnext_yaml" }
bsnext_tracing = { path = "../bsnext_tracing" }
bsnext_core = { path = "../bsnext_core" }
bsnext_fs = { path = "../bsnext_fs" }
bsnext_fs_helpers = { path = "../bsnext_fs_helpers" }
bsnext_dto = { path = "../bsnext_dto" }
bsnext_example = { path = "../bsnext_example" }
bsnext_output = { path = "../bsnext_output" }
rand = "0.8.5"
kill_tree = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
actix = { workspace = true }
actix-rt = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
glob = { workspace = true }
futures-util = { workspace = true }
futures = "0.3.30"

[dev-dependencies]
insta = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { version = "0.12" }
