[package]
name = "bsnext_task"
version = "0.22.1"
edition = "2024"

[dependencies]
bsnext_dto = { path = "../bsnext_dto" }
bsnext_fs = { path = "../bsnext_fs" }
actix = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
sqids = { workspace = true }
