[package]
name = "bsnext_tracing"
version = "0.22.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { workspace = true }
serde = { workspace = true }

[dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = ["registry", "std", "fmt", "json", "env-filter", "ansi"]

