[package]
name = "bsnext_utils"
version = "0.4.0"
edition = "2021"

[dependencies]
http-body-util = { workspace = true }
anyhow = { workspace = true }
http = { workspace = true }
axum = { workspace = true }

hyper-tls = { version = "0.6.0" }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
